fix table overflow

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -202,7 +202,13 @@ h3.post-description-meta.en {
     thead {
       border-bottom: 1px solid $grey-dark;
     }
-
+    tr {
+      overflow-x: auto;
+      overflow-y: hidden;
+      text-align: justify;
+      word-break: keep-all;
+      white-space:nowrap;
+    }
     th, td {
       padding: 4px 8px;
       width: 150px;
